Add: translate for words.

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,7 @@
           <div class="form-group">
             <label for="word">Word</label>
             <input type="text" class="form-control" id="word" placeholder="Enter word">
+            <input type="text" class="form-control" id="translate" placeholder="Enter translate">
           </div>
           <button type="submit" class="btn btn-primary">Add Word</button>
         </form>
@@ -63,6 +64,7 @@
             <tr>
               <th scope="col">#</th>
               <th scope="col">Word</th>
+              <th scope="col">Translate</th>
               <th scope="col">Actions</th>
             </tr>
           </thead>
