--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,9 @@
           <div class="form-group">
             <label for="word">Word</label>
             <input type="text" class="form-control" id="word" placeholder="Enter word">
+          </div>
+          <div class="form-group">
+            <label for="translate">Translation</label>
             <input type="text" class="form-control" id="translate" placeholder="Enter translate">
           </div>
           <button type="submit" class="btn btn-primary">Add Word</button>
