UPD: 単語ごとに例文の登録数を表示

--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,7 @@
               <th scope="col">#</th>
               <th scope="col">Word</th>
               <th scope="col">Translate</th>
+              <th scope="col">Sentence</th>
               <th scope="col">Actions</th>
             </tr>
           </thead>
